--- a/style.css
+++ b/style.css
@@ -340,8 +340,8 @@ body {
   color: var(--accent-color);
   border: 1px solid var(--accent-color);
   box-shadow: 0px 0px 10px var(--accent-color);
-  -webkit-animation: jello-vertical 0.9s infinite both;
-          animation: jello-vertical 0.9s infinite both;
+  -webkit-animation: jump 0.5s ease-in-out infinite both;
+          animation: jump 0.5s ease-in-out infinite both;
   cursor: pointer;
 }
 .backToTop:hover path {
@@ -2139,6 +2139,34 @@ body {
 @keyframes disappear {
   100% {
     opacity: 0;
+  }
+}
+@-webkit-keyframes jump {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+  75% {
+    transform: translateY(-2px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes jump {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+  75% {
+    transform: translateY(-2px);
+  }
+  100% {
+    transform: translateY(0);
   }
 }
 @-webkit-keyframes rotate {
