--- a/style.scss
+++ b/style.scss
@@ -342,10 +342,12 @@ body{
         color: var(--accent-color);
         border: 1px solid var(--accent-color);
         box-shadow: 0px 0px 10px var(--accent-color);
-        animation: jello-vertical 0.9s infinite both;
+        // animation: jello-vertical 0.9s infinite both;
+        animation: jump 0.5s ease-in-out infinite both;
         cursor: pointer;
         path{
             fill: var(--accent-color);
+            
         }
     }
     svg{
@@ -356,6 +358,7 @@ body{
         }
     }
 }
+
 .dropdown-content{
   width: 350px;
   height: 500px;
@@ -2002,6 +2005,20 @@ body{
 @keyframes disappear{
   100%{
     opacity: 0;
+  }
+}
+@keyframes jump {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+  75%{
+    transform: translateY(-2px);
+  }
+  100% {
+    transform: translateY(0);
   }
 }
   /////////////////////////////////////
